generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator erd {
  provider = "prisma-erd-generator"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id           String    @id
  name         String
  email        String    @unique
  password     String
  role         UserRoles
  refreshToken String?
}

model Crop {
  id             String     @id
  name           String
  scientificName String
  cultivars      Cultivar[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Cultivar {
  id   String @id
  name String

  constants Constant[]
  crop      Crop       @relation(fields: [cropId], references: [id])
  cropId    String

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Constant {
  id        String        @id
  value     Float
  reference String
  type      ConstantTypes

  comment           String
  climate           String?
  biome             String?
  irrigation        IrrigationTypes?
  country           String?
  soil              SoilTypes?
  cultivationSystem CultivationSystem?

  cultivarId String
  cultivar   Cultivar @relation(fields: [cultivarId], references: [id])

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

enum UserRoles {
  ADMIN
  OPERATOR
}

enum ReviewStatus {
  Pending
  Approved
  Declined
}

enum IrrigationTypes {
  Irrigation
  Dry
}

enum CultivationSystem {
  Conventional
  Organic
  Agroecological
}

enum SoilTypes {
  Clayey // Argiloso
  Sandy // Arenoso
  SandyClay // Arenoargiloso
}

enum ConstantTypes {
  HARVEST_INDEX // INDICE DE COLHEITA
  AERIAL_RESIDUE_INDEX // ÍNDICE DE RESÍDUO DA PARTE AÉREA
  PRODUCT_RESIDUE_INDEX // ÍNDICE DE RESÍDUO DO PRODUTO
  PRODUCT_DRY_MATTER_FACTOR // TEOR DA MATÉRIA SECA COLHIDA
  RESIDUE_DRY_MATTER_FACTOR // TEOR DA MATÉRIA SECA RESÍDUO
  BELOWGROUND_INDEX // ÍNDICE DE RAIZ (Belowground Biomass in the sheet, maybe?)
  WEED_AERIAL_FACTOR // FATOR DE CONVERSÃO PARA ESTIMAR A BIOMASSA AÉREA DAS ADVENTÍCIAS (where in the sheet?)
  WEED_BELOWGROUND_INDEX // ÍNDICE DE RAIZ ADVENTÍCIAS (where in the sheet?)
}
