//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  password String [not null]
  role UserRoles [not null]
  refreshToken String
}

Table Crop {
  id String [pk]
  name String [not null]
  scientificName String [not null]
  cultivars Cultivar [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Cultivar {
  id String [pk]
  name String [not null]
  constants Constant [not null]
  crop Crop [not null]
  cropId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Constant {
  id String [pk]
  value Float [not null]
  reference String [not null]
  type ConstantTypes [not null]
  comment String [not null]
  climate String
  biome String
  irrigation IrrigationTypes
  country String
  soil SoilTypes
  cultivationSystem CultivationSystem
  cultivarId String [not null]
  cultivar Cultivar [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Enum UserRoles {
  ADMIN
  OPERATOR
}

Enum ReviewStatus {
  Pending
  Approved
  Declined
}

Enum IrrigationTypes {
  Irrigation
  Dry
}

Enum CultivationSystem {
  Conventional
  Organic
  Agroecological
}

Enum SoilTypes {
  Clayey
  Sandy
  SandyClay
}

Enum ConstantTypes {
  HARVEST_INDEX
  AERIAL_RESIDUE_INDEX
  PRODUCT_RESIDUE_INDEX
  PRODUCT_DRY_MATTER_FACTOR
  RESIDUE_DRY_MATTER_FACTOR
  BELOWGROUND_INDEX
  WEED_AERIAL_FACTOR
  WEED_BELOWGROUND_INDEX
}

Ref: Cultivar.cropId > Crop.id

Ref: Constant.cultivarId > Cultivar.id